[package]
name = "hn-telegram"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
env_logger = "0.10.0"
clap = { version = "4.0.23", features = ["derive"] }
dirs = "4.0.0"
futures = "0.3.25"
log = "0.4.17"
reqwest = { version = "0.11.12", features = ["rustls-tls"], default-features = false }
serde = "1.0.147"
serde_json = "1.0.87"
teloxide = { version = "0.11.1", features = ["macros", "rustls", "ctrlc_handler"], default-features = false }
tokio = { version = "1.21.2", features = ["full"] }
tokio-cron-scheduler = { version = "0.8.1", features = ["signal"] }

[profile.release]
incremental = true
lto = "off"
